feat(Engine, Machine): implement reset functionality and add machine history tracking